--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.9.0",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
